my profile page

--- a/style.css
+++ b/style.css
@@ -52,3 +52,18 @@ i{
  a {
   text-decoration: none;
  }
+ @media (max-width: 960px) {
+  body {
+    width: 600px;
+  }
+}
+@media (max-width: 720px) {
+  body {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  body {
+    width: 300px;
+  }
+}
